tests/baselines/reference/contextualTyping41.errors.txt
tests/cases/compiler/contextualTyping41.ts(1,11): error TS2352: Neither type '() => string' nor type '{ (): number; (i: number): number; }' is assignable to the other.
  Signature '(): number' has no corresponding signature in '() => string'
    Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/contextualTyping41.ts (1 errors) ====
    var foo = <{():number; (i:number):number; }> (function(){return "err";});
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Neither type '() => string' nor type '{ (): number; (i: number): number; }' is assignable to the other.
!!! error TS2352:   Signature '(): number' has no corresponding signature in '() => string'
!!! error TS2352:     Type 'string' is not assignable to type 'number'.